src/parser/titeParser.cpp

// Generated from tite.g4 by ANTLR 4.13.2


#include "titeListener.h"

#include "titeParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct TiteParserStaticData final {
  TiteParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  TiteParserStaticData(const TiteParserStaticData&) = delete;
  TiteParserStaticData(TiteParserStaticData&&) = delete;
  TiteParserStaticData& operator=(const TiteParserStaticData&) = delete;
  TiteParserStaticData& operator=(TiteParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag titeParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<TiteParserStaticData> titeParserStaticData = nullptr;

void titeParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (titeParserStaticData != nullptr) {
    return;
  }
#else
  assert(titeParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<TiteParserStaticData>(
    std::vector<std::string>{
      "program", "sequence", "declaration", "identifiers", "expression", 
      "type", "function", "condition", "otherwise", "disjunction", "conjunction", 
      "or", "xor", "and", "equality", "relation", "shift", "additive", "product", 
      "factor", "power", "postfix", "primary", "tag", "assign", "literal", 
      "block", "array", "input", "delim"
    },
    std::vector<std::string>{
      "", "':'", "','", "'*'", "'\\u003F'", "'||'", "'&&'", "'|'", "'^'", 
      "'&'", "'=='", "'!='", "'==='", "'!=='", "'<'", "'>'", "'<='", "'>='", 
      "'<<'", "'>>'", "'+'", "'-'", "'..'", "'/'", "'%'", "'//'", "'++'", 
      "'--'", "'~'", "'!'", "'**'", "'.'", "'('", "')'", "'$'", "'#'", "'='", 
      "'=>'", "'<-'", "'@'", "'*='", "'/='", "'%='", "'//='", "'**='", "'+='", 
      "'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='", "'{'", "'}'", "'['", 
      "']'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "IDENTIFIER", "INT", "FLOAT", "CHAR", "STR", "WS", 
      "LF"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  titeParserStaticData = std::move(staticData);
}

}

titeParser::titeParser(TokenStream *input) : titeParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

titeParser::titeParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  titeParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *titeParserStaticData->atn, titeParserStaticData->decisionToDFA, titeParserStaticData->sharedContextCache, options);
}

titeParser::~titeParser() {
  delete _interpreter;
}

const atn::ATN& titeParser::getATN() const {
  return *titeParserStaticData->atn;
}

std::string titeParser::getGrammarFileName() const {
  return "tite.g4";
}

const std::vector<std::string>& titeParser::getRuleNames() const {
  return titeParserStaticData->ruleNames;
}

const dfa::Vocabulary& titeParser::getVocabulary() const {
  return titeParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView titeParser::getSerializedATN() const {
  return titeParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

titeParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

titeParser::SequenceContext* titeParser::ProgramContext::sequence() {
  return getRuleContext<titeParser::SequenceContext>(0);
}


size_t titeParser::ProgramContext::getRuleIndex() const {
  return titeParser::RuleProgram;
}

void titeParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void titeParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

titeParser::ProgramContext* titeParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, titeParser::RuleProgram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    sequence();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SequenceContext ------------------------------------------------------------------

titeParser::SequenceContext::SequenceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<titeParser::DeclarationContext *> titeParser::SequenceContext::declaration() {
  return getRuleContexts<titeParser::DeclarationContext>();
}

titeParser::DeclarationContext* titeParser::SequenceContext::declaration(size_t i) {
  return getRuleContext<titeParser::DeclarationContext>(i);
}

std::vector<titeParser::DelimContext *> titeParser::SequenceContext::delim() {
  return getRuleContexts<titeParser::DelimContext>();
}

titeParser::DelimContext* titeParser::SequenceContext::delim(size_t i) {
  return getRuleContext<titeParser::DelimContext>(i);
}


size_t titeParser::SequenceContext::getRuleIndex() const {
  return titeParser::RuleSequence;
}

void titeParser::SequenceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSequence(this);
}

void titeParser::SequenceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSequence(this);
}

titeParser::SequenceContext* titeParser::sequence() {
  SequenceContext *_localctx = _tracker.createInstance<SequenceContext>(_ctx, getState());
  enterRule(_localctx, 2, titeParser::RuleSequence);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(62);
    declaration();
    setState(68);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(63);
        delim();
        setState(64);
        declaration(); 
      }
      setState(70);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

titeParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

titeParser::ExpressionContext* titeParser::DeclarationContext::expression() {
  return getRuleContext<titeParser::ExpressionContext>(0);
}

titeParser::IdentifiersContext* titeParser::DeclarationContext::identifiers() {
  return getRuleContext<titeParser::IdentifiersContext>(0);
}


size_t titeParser::DeclarationContext::getRuleIndex() const {
  return titeParser::RuleDeclaration;
}

void titeParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void titeParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}

titeParser::DeclarationContext* titeParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, titeParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      setState(71);
      identifiers();
      setState(72);
      match(titeParser::T__0);
      break;
    }

    default:
      break;
    }
    setState(76);
    expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifiersContext ------------------------------------------------------------------

titeParser::IdentifiersContext::IdentifiersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<titeParser::PrimaryContext *> titeParser::IdentifiersContext::primary() {
  return getRuleContexts<titeParser::PrimaryContext>();
}

titeParser::PrimaryContext* titeParser::IdentifiersContext::primary(size_t i) {
  return getRuleContext<titeParser::PrimaryContext>(i);
}


size_t titeParser::IdentifiersContext::getRuleIndex() const {
  return titeParser::RuleIdentifiers;
}

void titeParser::IdentifiersContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdentifiers(this);
}

void titeParser::IdentifiersContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdentifiers(this);
}

titeParser::IdentifiersContext* titeParser::identifiers() {
  IdentifiersContext *_localctx = _tracker.createInstance<IdentifiersContext>(_ctx, getState());
  enterRule(_localctx, 6, titeParser::RuleIdentifiers);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    primary();
    setState(83);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == titeParser::T__1) {
      setState(79);
      match(titeParser::T__1);
      setState(80);
      primary();
      setState(85);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

titeParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

titeParser::TypeContext* titeParser::ExpressionContext::type() {
  return getRuleContext<titeParser::TypeContext>(0);
}

titeParser::AssignContext* titeParser::ExpressionContext::assign() {
  return getRuleContext<titeParser::AssignContext>(0);
}

titeParser::ExpressionContext* titeParser::ExpressionContext::expression() {
  return getRuleContext<titeParser::ExpressionContext>(0);
}

tree::TerminalNode* titeParser::ExpressionContext::LF() {
  return getToken(titeParser::LF, 0);
}


size_t titeParser::ExpressionContext::getRuleIndex() const {
  return titeParser::RuleExpression;
}

void titeParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void titeParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}

titeParser::ExpressionContext* titeParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 8, titeParser::RuleExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == titeParser::T__2) {
      setState(86);
      match(titeParser::T__2);
    }
    setState(99);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      setState(89);
      type();
      break;
    }

    case 2: {
      setState(91);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 2256303472304455808) != 0)) {
        setState(90);
        type();
      }
      setState(93);
      assign();
      setState(95);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == titeParser::LF) {
        setState(94);
        match(titeParser::LF);
      }
      setState(97);
      expression();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

titeParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

titeParser::ConditionContext* titeParser::TypeContext::condition() {
  return getRuleContext<titeParser::ConditionContext>(0);
}

titeParser::FunctionContext* titeParser::TypeContext::function() {
  return getRuleContext<titeParser::FunctionContext>(0);
}


size_t titeParser::TypeContext::getRuleIndex() const {
  return titeParser::RuleType;
}

void titeParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void titeParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}

titeParser::TypeContext* titeParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 10, titeParser::RuleType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(103);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(101);
      condition();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(102);
      function();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

titeParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

titeParser::InputContext* titeParser::FunctionContext::input() {
  return getRuleContext<titeParser::InputContext>(0);
}

titeParser::TypeContext* titeParser::FunctionContext::type() {
  return getRuleContext<titeParser::TypeContext>(0);
}


size_t titeParser::FunctionContext::getRuleIndex() const {
  return titeParser::RuleFunction;
}

void titeParser::FunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction(this);
}

void titeParser::FunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction(this);
}

titeParser::FunctionContext* titeParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 12, titeParser::RuleFunction);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    input();
    setState(107);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2256303472304455808) != 0)) {
      setState(106);
      type();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConditionContext ------------------------------------------------------------------

titeParser::ConditionContext::ConditionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

titeParser::DisjunctionContext* titeParser::ConditionContext::disjunction() {
  return getRuleContext<titeParser::DisjunctionContext>(0);
}

titeParser::ExpressionContext* titeParser::ConditionContext::expression() {
  return getRuleContext<titeParser::ExpressionContext>(0);
}

titeParser::OtherwiseContext* titeParser::ConditionContext::otherwise() {
  return getRuleContext<titeParser::OtherwiseContext>(0);
}

std::vector<tree::TerminalNode *> titeParser::ConditionContext::LF() {
  return getTokens(titeParser::LF);
}

tree::TerminalNode* titeParser::ConditionContext::LF(size_t i) {
  return getToken(titeParser::LF, i);
}


size_t titeParser::ConditionContext::getRuleIndex() const {
  return titeParser::RuleCondition;
}

void titeParser::ConditionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCondition(this);
}

void titeParser::ConditionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCondition(this);
}

titeParser::ConditionContext* titeParser::condition() {
  ConditionContext *_localctx = _tracker.createInstance<ConditionContext>(_ctx, getState());
  enterRule(_localctx, 14, titeParser::RuleCondition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(122);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(109);
      disjunction(0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(110);
      disjunction(0);
      setState(112);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == titeParser::LF) {
        setState(111);
        match(titeParser::LF);
      }
      setState(114);
      match(titeParser::T__3);
      setState(116);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
      case 1: {
        setState(115);
        match(titeParser::LF);
        break;
      }

      default:
        break;
      }
      setState(120);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
      case 1: {
        setState(118);
        expression();
        break;
      }

      case 2: {
        setState(119);
        otherwise();
        break;
      }

      default:
        break;
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OtherwiseContext ------------------------------------------------------------------

titeParser::OtherwiseContext::OtherwiseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

titeParser::ConditionContext* titeParser::OtherwiseContext::condition() {
  return getRuleContext<titeParser::ConditionContext>(0);
}

titeParser::ExpressionContext* titeParser::OtherwiseContext::expression() {
  return getRuleContext<titeParser::ExpressionContext>(0);
}

std::vector<tree::TerminalNode *> titeParser::OtherwiseContext::LF() {
  return getTokens(titeParser::LF);
}

tree::TerminalNode* titeParser::OtherwiseContext::LF(size_t i) {
  return getToken(titeParser::LF, i);
}


size_t titeParser::OtherwiseContext::getRuleIndex() const {
  return titeParser::RuleOtherwise;
}

void titeParser::OtherwiseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOtherwise(this);
}

void titeParser::OtherwiseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOtherwise(this);
}

titeParser::OtherwiseContext* titeParser::otherwise() {
  OtherwiseContext *_localctx = _tracker.createInstance<OtherwiseContext>(_ctx, getState());
  enterRule(_localctx, 16, titeParser::RuleOtherwise);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2260807003212349576) != 0)) {
      setState(124);
      expression();
    }
    setState(128);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == titeParser::LF) {
      setState(127);
      match(titeParser::LF);
    }
    setState(130);
    match(titeParser::T__0);
    setState(132);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == titeParser::LF) {
      setState(131);
      match(titeParser::LF);
    }
    setState(134);
    condition();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DisjunctionContext ------------------------------------------------------------------

titeParser::DisjunctionContext::DisjunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

titeParser::ConjunctionContext* titeParser::DisjunctionContext::conjunction() {
  return getRuleContext<titeParser::ConjunctionContext>(0);
}

titeParser::DisjunctionContext* titeParser::DisjunctionContext::disjunction() {
  return getRuleContext<titeParser::DisjunctionContext>(0);
}

std::vector<tree::TerminalNode *> titeParser::DisjunctionContext::LF() {
  return getTokens(titeParser::LF);
}

tree::TerminalNode* titeParser::DisjunctionContext::LF(size_t i) {
  return getToken(titeParser::LF, i);
}


size_t titeParser::DisjunctionContext::getRuleIndex() const {
  return titeParser::RuleDisjunction;
}

void titeParser::DisjunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDisjunction(this);
}

void titeParser::DisjunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDisjunction(this);
}


titeParser::DisjunctionContext* titeParser::disjunction() {
   return disjunction(0);
}

titeParser::DisjunctionContext* titeParser::disjunction(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  titeParser::DisjunctionContext *_localctx = _tracker.createInstance<DisjunctionContext>(_ctx, parentState);
  titeParser::DisjunctionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 18;
  enterRecursionRule(_localctx, 18, titeParser::RuleDisjunction, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(137);
    conjunction(0);
    _ctx->stop = _input->LT(-1);
    setState(150);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 18, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<DisjunctionContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleDisjunction);
        setState(139);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(141);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == titeParser::LF) {
          setState(140);
          match(titeParser::LF);
        }
        setState(143);
        match(titeParser::T__4);
        setState(145);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == titeParser::LF) {
          setState(144);
          match(titeParser::LF);
        }
        setState(147);
        conjunction(0); 
      }
      setState(152);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 18, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ConjunctionContext ------------------------------------------------------------------

titeParser::ConjunctionContext::ConjunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

titeParser::OrContext* titeParser::ConjunctionContext::or_() {
  return getRuleContext<titeParser::OrContext>(0);
}

titeParser::ConjunctionContext* titeParser::ConjunctionContext::conjunction() {
  return getRuleContext<titeParser::ConjunctionContext>(0);
}

std::vector<tree::TerminalNode *> titeParser::ConjunctionContext::LF() {
  return getTokens(titeParser::LF);
}

tree::TerminalNode* titeParser::ConjunctionContext::LF(size_t i) {
  return getToken(titeParser::LF, i);
}


size_t titeParser::ConjunctionContext::getRuleIndex() const {
  return titeParser::RuleConjunction;
}

void titeParser::ConjunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConjunction(this);
}

void titeParser::ConjunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<titeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConjunction(this);
}


titeParser::ConjunctionContext* titeParser::conjunction() {
   return conjunction(0);
}

titeParser::ConjunctionContext* titeParser::conjunction(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  titeParser::ConjunctionContext *_localctx = _tracker.createInstance<ConjunctionContext>(_ctx, parentState);
  titeParser::ConjunctionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 20;
  enterRecursionRule(_localctx, 20, titeParser::RuleConjunction, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(154);
    or_(0);
    _ctx->stop = _input->LT(-1);
    setState(167);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 21, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<ConjunctionContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleConjunction);
        setState(156);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(158);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == titeParser::LF) {
          setState(157);
          match(titeParser::LF);
        }
        setState(160);
        match(titeParser::T__5);
        setState(162);
        _errHandler->sync(this);
